
Dir::

  Modified method::

    * Dir#glob and Dir#[] no longer allow NUL-separated glob pattern.
      Use Array instead.  [Feature #14643]

Encoding::

  * Added new encoding CESU-8 [Feature #15931]

Enumerable::

  New methods::

    * Added Enumerable#filter_map.  [Feature #15323]

    * Added Enumerable#tally.  [Feature #11076]

Enumerator::

  New method::

    * Added Enumerator::Yielder#to_proc so that a Yielder object
      can be directly passed to another method as a block
      argument.  [Feature #15618]

FrozenError::

  New method::

    * Added FrozenError#receiver to return the frozen object that
      modification was attempted on.  To set this object when raising
      FrozenError in Ruby code, pass it as the second argument to
      FrozenError.new.

GC::

  New method::

    * Added GC.compact method for compacting the heap.
      This function compacts live objects in the heap so that fewer pages may
      be used, and the heap may be more CoW friendly. [Feature #15626]

      Details on the algorithm and caveats can be found here:
      https://bugs.ruby-lang.org/issues/15626

IO::

  New method::

    * Added IO#set_encoding_by_bom to check the BOM and set the external
      encoding.  [Bug #15210]

Integer::

  Modified method::

    * Integer#[] now supports range operation.  [Feature #8842]

         0b01001101[2, 4]  #=> 0b0011
         0b01001100[2..5]  #=> 0b0011
         0b01001100[2...6] #=> 0b0011
             ^^^^

Module::

  New method::

    * Added Module#const_source_location to retrieve the location where a
      constant is defined.  [Feature #10771]

  Modified method::

    * Module#autoload? now takes an +inherit+ optional argument, like as
      Module#const_defined?.  [Feature #15777]

ObjectSpace::WeakMap::

  Modified method::

    * ObjectSpace::WeakMap#[]= now accepts special objects as either key or
      values.  [Feature #16035]

Regexp / String::

    * Update Unicode version and Emoji version from 11.0.0 to